prover-ray/zkcdriver/testdata/synced/invalid/const_01.zkc
//error:2:18-21:expected type u8
const LARGE:u8 = 256
